# agent-first-fizzbuzz-scalable

./: .dockerignore  .gitignore  .output.txt  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.monolith  LICENSE.md  README.md  RECOMMATIONS.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  fly-web-server.toml  fly.toml  full_output.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  test_output.txt  tsconfig.json  turbo.json  work.patch
RCAs/: RCA-001-fizzbuzz-chat-deployment-failure.md  RCA-001-node-version-mismatch.md  RCA-002-node-version-reversion-incident.md  RCA-003-github-actions-deployment-failure.md  RCA-004-pnpm-lockfile-desynchronization.md  RCA-005-accidental-documentation-deletion.md  RCA-007-test-services-failure.md  RCA-008-node-25-corepack-unbundling.md  RCA-009-eslint-types-stub-error.md  RCA-011-marketing-site-docker-404-and-test-failures.md  RCA-012-tailwind-styles-not-applying.md  RCA-013-linter-broken-on-constant-binary-expressions.md  RCA-014-agent-pr-workflow-bypass.md  RCA-015-xlsx-security-vulnerabilities.md  RCA-016-vercel-invalid-export-esm.md  RCA-017-web-server-deploy-fetch-types.md  RCA-018-lint-broken-on-main.md  RCA-019-fly-io-machine-stability.md  RCA-2026-04-18-v86-vercel-enoent.md  RCA-20260419-web-server-docker-chat-failure.md
apps/fizzbuzz-transformer/: .gitignore  README.md  export_onnx.py  package.json  pyproject.toml
apps/fizzbuzz-transformer/fizzbuzz_transformer/: __init__.py  data.py  infer.py  model.py  server.py  tokenizer.py  train.py
docs/: AUTHENTICATION.md  (+14 more)
(+417 files in other folders)
