[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fizzbuzz-transformer"
version = "0.1.0"
description = "A lightweight transformer model for FizzBuzz chat agent demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
]

[project.scripts]
fizzbuzz-train = "fizzbuzz_transformer.train:main"
fizzbuzz-infer = "fizzbuzz_transformer.infer:main"
